proj1/testing/error/wrongMovingRotors.inp
* B Beta Gamma I II (AAAA)
HELLO WORLD